2006-06-04 Marco Antonio Islas <markuz@islascruz.org>
	* Christine: Filtering options are improved to work with minilists
				- Filtering bugfix
				- Browser show/hide gconfized
	* lib_chrsitine/library.py: Minilist filering stuff
2006-06-02 Marco Antonio Islas <markuz@islascruz.org>
	* Christine: On jump_to function, now pressing Enter on any
	spin button will cause an OK press button signal
2006-05-19 Marco Antonio Islas <markuz@islascruz.org>
	* ChangeLog: Created ChangeLog